fixes url ignored in search and ff layout issue

--- a/src/components/TopBar/components/ShopSwitcher/ShopSwitcher.scss
+++ b/src/components/TopBar/components/ShopSwitcher/ShopSwitcher.scss
@@ -2,6 +2,7 @@
 
 .Logo {
   width: rem(25px);
+  flex-shrink: 0;
 }
 
 .Activator {
